# Operating-Systems

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Readme.txt  a3_test.c  docker-compose.yml  readme.md  sanityCheck.c  sma.c  sma.h
.run/: client.run.xml  server.run.xml
Assignment-1/: CMakeLists.txt  Client.c  Command.h  Server.c  a1_lib.c  a1_lib.h  readme.md  simple_client.c  small_client.c  small_server.c
Assignment-2/: CMakeLists.txt  README.md  queue.h  scratch.c  small_server.c  socket_lib.c  socket_lib.h  sut.c  sut.h  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c
Assignment-2/Support/YAUThreads/: YAUThreads.c  YAUThreads.h  testYAU.c
Assignment-2/Support/io/: remote_shell.sh
Assignment-2/Support/queue/: queue_example.c
Assignment-3/: .gitignore  README.md  Readme.txt  TestingOutput.txt  a3_test.c  sma.c  sma.h
Sample/: a1_lib.h  example_client.c  example_server.c
Tutorial-1/: Client.c  Server.c
ansible/: hosts  main.yml
